
* Integer

  * Integer.sqrt  [Feature #13219]
  * Integer#step does no longer rescue exceptions when given
    a step value which cannot be compared with #> to 0. [Feature #7688]
  * Integer#{round,floor,ceil,truncate} now always return an Integer.
    [Bug #13420]
  * Integer#pow now has an optional modulo argument for calculating modular
    exponentiation.  [Feature #12508] [Feature #11003]

* Kernel

  * Kernel#yield_self  [Feature #6721]
  * Kernel#pp [Feature #14123]

* Module
  * Module#attr, attr_accessor, attr_reader, attr_writer are now public [#14132]
  * Module#define_method, alias_method, undef_method, remove_method are now public [#14133]

* Numeric

  * Numerical comparison operators (<,<=,>=,>) no longer rescue exceptions
    of #coerce. Return nil in #coerce if the coercion is impossible.
    [Feature #7688]

* Process

  * Precision of Process.times is improved if getrusage(2) exists. [Feature #11952]
  * Process.last_status. [Feature #14043]

* Range
  * Range#initialize no longer rescue exceptions when comparing begin and
    end with #<=> and raise a "bad value for range" ArgumentError
    but instead let the exception from the #<=> call go through.
    [Feature #7688]

* Regexp
  * Update to Onigmo 6.1.3-669ac9997619954c298da971fcfacccf36909d05.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82
  * Support for 5 emoji-related Unicode character properties

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]
  * String#{casecmp,casecmp?} now return nil for non-string arguments
    instead of raising a TypeError. [Bug #13312]
  * String#delete_prefix is added to remove prefix [Feature #12694]
  * String#delete_prefix! is added to remove prefix destructively [Feature #12694]