@@ -82,6 +82,7 @@ with all sufficient information, see the ChangeLog file or Redmine
     [Bug #13420]
   * Integer#pow now has an optional modulo argument for calculating modular
     exponentiation.  [Feature #12508] [Feature #11003]
+  * Integer#allbits?, Integer#anybits?, Integer#nobits? [Feature #12753]
 
 * Kernel
 
